[package]
name = "nitrokey-test"
version = "0.3.2"
edition = "2018"
authors = ["Daniel Mueller <deso@posteo.net>"]
license = "GPL-3.0-or-later"
homepage = "https://crates.io/crates/nitrokey-test"
repository = "https://github.com/d-e-s-o/nitrokey-test.git"
readme = "README.md"
categories = ["development-tools::testing", "development-tools"]
keywords = ["nitrokey", "test"]
description = """
Supporting test infrastructure for the nitrokey crate and others using it.
"""

[workspace]
members = ["state"]

[badges]
gitlab = { repository = "d-e-s-o/nitrokey-test", branch = "master" }

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dev-dependencies.nitrokey]
version = ">=0.4.0-alpha.3"

[dev-dependencies.nitrokey-test-state]
version = "0.1"
path = "state"
